@@ -2344,3 +2344,14 @@ This is the AHELP index.
     > @command/restrict @emit=!flag^suspect&!flag^gagged
 
 See also: @command, @function, @attribute, @lock
+& DESCRIPTOR
+& PORT
+
+  A descriptor (also called a port or socket descriptor) is a unique (though
+  reusable) number assigned to each connection to the MUSH. The descriptor
+  for each connection is shown on the Wizard WHO in the 'Des' column.
+  
+  Several commands and functions take a descriptor as an argument, or return
+  the descriptor(s) associated with a player's connection.
+  
+See also: WHO, ports(), lports(), player(), @boot, CONNECTION FUNCTIONS
